--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,5 @@ SDL
 makefile
 winmake.bat
 pong/makefile
-pong/.main.c.swp
-pong/.init.c.swp
-pong/.error.c.swp
-pong/.ret.c.swp
-pong/hdrs/.ret.h.swp
-pong/hdrs/.error.h.swp
-pong/hdrs/.init.h.swp
-pong/hdrs/.main.h.swp
-
+*.swp
 
